<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddFragment" >

        <TextView
            android:id="@+id/logBook"
            style="@style/HeaderStyle"
            android:text="@string/logbook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/SubHeaderStyle"
            android:layout_marginTop="95dp"
            android:text="@string/register_drive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logBook" />

        <Button
            android:id="@+id/backButton"
            style="@style/ButtonStyleBack"
            android:layout_marginTop="15dp"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logBook" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextStyle"
            android:layout_marginTop="120dp"
            android:text="@string/vehicle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextStyle"
            android:layout_marginTop="40dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextStyle"
            android:layout_marginTop="80dp"
            android:text="@string/kilometers"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="148dp"
            android:layout_height="27dp"
            android:layout_marginStart="60dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="113dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/chooseDateButton"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextStyle"
            android:layout_marginStart="5dp"
            android:text="KM"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber" />

        <Button
            android:id="@+id/saveButton"
            style="@style/ButtonStyle"
            android:layout_marginTop="60dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <Button
            android:id="@+id/chooseDateButton"
            style="@style/ButtonStyleBack"
            android:layout_marginTop="5dp"
            android:text="@string/choose"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logBook" />

        <TextView
            android:id="@+id/dateTextView"
            style="@style/TextStyle"
            android:text="1.1.2024"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>