<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/savedLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SavedFragment" >

        <TextView
            android:id="@+id/logBook"
            style="@style/HeaderStyle"
            android:text="@string/logbook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/SubHeaderStyle"
            android:layout_marginTop="95dp"
            android:text="@string/drive_saved_as"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logBook" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextStyle"
            android:layout_marginTop="120dp"
            android:text="@string/vehicle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextStyle"
            android:layout_marginTop="40dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextStyle"
            android:layout_marginTop="40dp"
            android:text="@string/kilometers"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/savedVehicleTextView"
            style="@style/TextStyleSaved"
            android:layout_marginStart="60dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/savedDateTextView"
            style="@style/TextStyleSaved"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/savedVehicleTextView"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/savedKilometersTextView"
            style="@style/TextStyleSaved"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/savedDateTextView"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView9"
            style="@style/TextStyle"
            android:layout_marginStart="10dp"
            android:text="KM"
            app:layout_constraintStart_toEndOf="@+id/savedKilometersTextView"
            app:layout_constraintTop_toTopOf="@+id/savedKilometersTextView" />

        <Button
            android:id="@+id/returnMainButton"
            style="@style/ButtonStyleInformation"
            android:layout_marginTop="80dp"
            android:text="@string/return_main_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/savedKilometersTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>